<resources>
    <string name="app_name">AndroidDev2k1s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">Description</string>
    <string name="delete_all">Delete all</string>
    <string name="add_new_task">Add task</string>
    <string name="first_task">Add your first task!</string>
    <string name="task_done">Mark task as done</string>
    <string name="task_delete">Delete this task</string>
    <string name="your_tasks">Your tasks</string>
    <string name="no_tasks">You\'ve got no tasks yet</string>
    <string name="title">Title</string>
    <string name="set_date">Set Date</string>
    <string name="submit">Submit</string>
    <string name="set_location">Set location</string>
</resources>